# ShaderTogglerAdvanced

./: CLEAN_BUILD.md  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
STA CLEAN/: CLEAN_REPORT.txt
STA CLEAN/ShaderToggler-1.2.1/src/: ShaderToggler.rc
STA CLEAN/docs/: SECURITY.md
ShaderToggler-1.2.1/: README.md  README_texture_toggle.md
ShaderToggler-1.2.1/ShaderToggler-1.2.1/: LICENSE  README.md
ShaderToggler-1.2.1/ShaderToggler-1.2.1/src/: Main.cpp  TextureToggle.cpp  TextureToggle.h  ToggleGroup.h
ShaderToggler-1.2.1/src/: Main.cpp  ShaderToggler.rc  ShaderToggler.vcxproj  TextureToggle.cpp  TextureToggle.h
ShaderToggler-1.2.1_src/: CMakeLists.txt  build_windows.bat
ShaderToggler-1.2.1_src/ShaderToggler-1.2.1/src/: Main.cpp
ShaderToggler-1.2.1_src_fix3/ShaderToggler-1.2.1/src/: Main.cpp
ShaderToggler-1.2.1_src_texture_persist_pkg/: README_AV.md  README_RELEASE.md
ShaderToggler-1.2.1_src_texture_persist_pkg/ShaderToggler-1.2.1/src/: TextureToggle.h
ShaderToggler-1.2.1_src_texture_persist_pkg/src/: version.rc
ShaderToggler-1.3.0_src/ShaderToggler-1.3.0/src/: Main.cpp  ShaderToggler.rc
ShaderToggler-1.3.2_src/: LICENSE
ShaderToggler-1.3.2_src/ShaderToggler-1.3.2/src/: CDataFile.h  KeyData.cpp  KeyData.h  Main.cpp  ShaderManager.cpp  (+6 more)
ShaderToggler-1.3.4_src/ShaderToggler-1.3.4/: README.md
ShaderToggler-1.3.5_src/ShaderToggler-1.3.5/: README.md
ShaderToggler-1.3.6_src/ShaderToggler-1.3.6/: LICENSE  README.md
ShaderTogglerAdvanced-main/: LICENSE  README.md
ShaderTogglerAdvanced-main/ShaderTogglerAdvanced-main/: README.md
(+85 files in other folders)
